--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,19 @@
 ul {
   list-style-position: inside;
 }
+
+.fade {
+  opacity: 0;
+  -webkit-transition: opacity 0.15s linear;
+  -moz-transition: opacity 0.15s linear;
+  -o-transition: opacity 0.15s linear;
+  transition: opacity 0.15s linear;
+}
+.fade.in {
+  opacity: 1;
+}
+
+body {
+  background: #859dbe;
+  font-family: 'Roboto', sans-serif;
+}
